--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.54.0",
+    "@aws-cdk/assert": "1.55.0",
     "@types/jest": "^25.2.1",
     "@types/node": "10.17.5",
     "jest": "^25.5.0",
     "ts-jest": "^25.3.1",
-    "aws-cdk": "1.54.0",
+    "aws-cdk": "1.55.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.7.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^1.54.0",
-    "@aws-cdk/aws-iam": "^1.54.0",
-    "@aws-cdk/aws-rds": "^1.54.0",
-    "@aws-cdk/aws-s3": "^1.54.0",
-    "@aws-cdk/aws-secretsmanager": "^1.54.0",
-    "@aws-cdk/aws-ssm": "^1.54.0",
-    "@aws-cdk/core": "1.54.0",
+    "@aws-cdk/aws-ec2": "^1.55.0",
+    "@aws-cdk/aws-elasticache": "^1.55.0",
+    "@aws-cdk/aws-iam": "^1.55.0",
+    "@aws-cdk/aws-rds": "^1.55.0",
+    "@aws-cdk/aws-s3": "^1.55.0",
+    "@aws-cdk/aws-secretsmanager": "^1.55.0",
+    "@aws-cdk/aws-ssm": "^1.55.0",
+    "@aws-cdk/core": "1.55.0",
     "source-map-support": "^0.5.16"
   }
 }
