--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-cognito": "^1.55.0",
     "@aws-cdk/aws-ec2": "^1.55.0",
     "@aws-cdk/aws-elasticache": "^1.55.0",
     "@aws-cdk/aws-iam": "^1.55.0",
