--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@aws-cdk/aws-events": "^1.60.0",
     "@aws-cdk/aws-iam": "^1.60.0",
     "@aws-cdk/aws-lambda": "^1.60.0",
+    "@aws-cdk/aws-logs": "^1.60.0",
     "@aws-cdk/aws-rds": "^1.60.0",
     "@aws-cdk/aws-s3": "^1.60.0",
     "@aws-cdk/aws-secretsmanager": "^1.60.0",
