--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.66.0",
     "@aws-cdk/aws-codebuild": "^1.66.0",
+    "@aws-cdk/aws-codecommit": "^1.66.0",
     "@aws-cdk/aws-codepipeline": "^1.66.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.66.0",
     "@aws-cdk/aws-cognito": "^1.66.0",
